fixing overflowing in svg

--- a/main-page.scss
+++ b/main-page.scss
@@ -24,6 +24,10 @@ body {
                     height: 30px;
                     background-color: transparent;
                     cursor: default;
+                    svg{
+                        width: 30px;
+                        height: 30px;
+                    }
                 }
                 margin-top: 0px;
                 background-color: transparent;
